<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/t_address_hint"
            android:inputType="textPersonName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_start_search" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_Me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_me" />
    </LinearLayout>

    <include android:id="@+id/mapper" layout="@layout/fragment_window_maps" />

</LinearLayout>